# Essay-DIP-BMP-SIMD-Operation

./: .directory  BitMapRevcolorSIMD.kdev4  CMakeLists.txt  README.md  main.c
.kdev4/: BitMapRevcolorSIMD.kdev4
libbmp/: CMakeLists.txt  bmp.c  bmp.h
